Minor fix to header nav-menu
Moved the menu halves to off-screen starting position to prevent menu 'flashing' on initial page load

--- a/src/styles/components/_Header.scss
+++ b/src/styles/components/_Header.scss
@@ -62,11 +62,12 @@ header {
   overflow: hidden;
 }
 .menu-branding {
-  background: rgba($primary-color, $bg-opacity);
-  transform: translateY(100%);
+  background: rgba($primary-color, 1);
+  position: relative;
+  top: 100vh;
   @include easeOut;
   &.show {
-    transform: translateY(0);
+    transform: translateY(-100%);
   }
   & .portrait {
     background-image: url(/img/avatar.jpeg);
@@ -81,12 +82,13 @@ header {
 .menu-nav {
   margin: 0;
   padding: 0;
-  background: rgba(darken($primary-color, 5), $bg-opacity);
+  background: rgba(darken($primary-color, 5), 1);
   list-style: none;
-  transform: translateY(-100%);
+  position: relative;
+  bottom: 100vh;
   @include easeOut;
   &.show {
-    transform: translateY(0);
+    transform: translateY(100%);
   }
 }
 
@@ -123,9 +125,10 @@ header {
   .menu-branding {
     width: 100%;
     height: 30vh;
-    transform: translateX(-100%);
+    top: 0;
+    left: -100vw;
     &.show {
-      transform: translateX(0);
+      transform: translateX(100%);
     }
     
     .portrait {
@@ -136,9 +139,10 @@ header {
   .menu-nav {
     width: 100%;
     height: 70vh;
-    transform: translateX(100%);
+    bottom: 0;
+    right: -100vw;
     &.show {
-      transform: translateX(0);
+      transform: translateX(-100%);
     }
   }
 }
